# profile-verification-system

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DECISIONS.md  README.md  SAMPLE_REQUESTS.md  SOLUTION.md  accounts.example.json  docker-compose.yml  package-lock.json  package.json
extension/: README.md  background.js  content.js  manifest.json  options.html  options.js  relay.js
fetcher/: Dockerfile  pyproject.toml
fetcher/app/: config.py  main.py
fetcher/app/domain/: __init__.py  account.py  company.py  profile.py
fetcher/app/fetchers/: __init__.py  base.py  fallback.py  fixture.py  headless.py  login.py  public.py  voyager.py
fetcher/app/generic/: __init__.py  fetcher.py
fetcher/app/middleware/: rate_limit.py
fetcher/app/observability/: logging.py
fetcher/app/parsers/: __init__.py  company.py  profile.py  voyager_graph.py
fetcher/app/pool/: account_pool.py  pool_fetcher.py
fetcher/app/queue/: __init__.py  job_queue.py
fetcher/app/routes/: __init__.py  captures.py  fetch.py  health.py  search.py
fetcher/app/scraping/: __init__.py  headers.py  ratelimit.py  retry.py  tls.py
fetcher/app/services/: __init__.py  company_service.py  profile_service.py
fetcher/app/storage/: __init__.py  captures.py  companies.py  mongo.py  profiles.py  redis_cache.py
samples/: 01_happy_path.http  02_rebrand.http  03_multi_role.http  04_stale_profile.http  05_ended_role.http  06_contractor.http  07_not_at_company.http  08_ambiguous_company.http  09_messy_url.http  README.md
verifier/: Dockerfile  package-lock.json  package.json  tsconfig.json
(+53 files in other folders)
