[project]
name = "fetcher"
version = "0.1.0"
description = "LinkedIn data acquisition service: Voyager scraper, fixtures, extension intake."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "motor>=3.6",
    "curl-cffi>=0.7",
    "httpx>=0.27",
    "structlog>=24.4",
    "python-dotenv>=1.0",
    "redis[hiredis]>=5.0",
]

[project.optional-dependencies]
headless = ["playwright>=1.48", "playwright-stealth>=1.0"]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "ruff>=0.7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
